<resources>
    <string name="app_name">Coffee shop</string>
    <string name="textview">TextView</string>
    <string name="quantity">Quantity</string>
    <string name="order">order</string>
    <string name="IncrementButton">+</string>
    <string name="price">Price</string>
    <string name="_0">0</string>
    <string name="DecrementButton">-</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="Name">Name</string>
    <string name="Chocolate">chocolate</string>
</resources>